--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,34 @@ jobs:
             cd backend
             npm install
             npm run test
+  
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-scan]
+      - run:
+          name: scan-frontend
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
+  
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-scan]
+      - run:
+          name: scan-backend
+          command: |
+            cd backend
+            npm install
+            npm audit --audit-level=critical
 
 workflows:
   default:
@@ -104,4 +132,8 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend] 
+      - scan-frontend:
+          requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
 
