--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,8 +107,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix
+            npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
   
   scan-backend:
@@ -123,9 +122,7 @@ jobs:
           command: |
             cd backend
             npm install            
-            npm audit fix --audit-level=critical --force
-            npm audit fix
-            npm audit --audit-level=critical
+            npm audit fix --force
 
 workflows:
   default:
