--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
             cd frontend
             npm install
             npm audit fix --force --audit-level=critical
-            npm adfit fix
+            npm audit fix
             npm audit --audit-level=critical
   
   scan-backend:
