--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -35,5 +35,5 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
-        - Key: Project
-          Value: Udapeople
+        - Key: project
+          Value: udapeople
