--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,7 +201,7 @@ jobs:
             )
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
-            head .circleci/ansible/inventory.txt
+            
       - persist_to_workspace:
           root: ~/
           paths:
@@ -225,7 +225,7 @@ jobs:
           command: |
             cd .circleci/ansible
             cat inventory.txt
-            ansible-playbook -i inventory.txt configure-server.yml
+            ansible-playbook -vvv -i inventory.txt configure-server.yml
       - notify_on_failure
       - destroy-environment
 
