--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,9 +223,17 @@ jobs:
       - run:
           name: Configure server
           command: |
+
             cd .circleci/ansible
-            cat inventory.txt
-            ansible-playbook -vvv -i inventory.txt configure-server.yml
+            cat inventory.txt    
+            
+            cd .ssh
+            eval `ssh-agent`
+            chmod 400 keyp3.pem
+            ssh-add keyp3.pem 
+            cd ..            
+                                         
+            ansible-playbook -i ~/inventory.txt -u ubuntu --private-key ./.ssh/keyp3.pem configure-sever.yml
       - notify_on_failure
       - destroy-environment
 
