--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,7 +233,7 @@ jobs:
             cd ..            
 
             cat inventory.txt                                        
-            ansible-playbook -i inventory.txt -u ubuntu --private-key .ssh/keyp3.pem configure-sever.yml
+            ansible-playbook -i inventory.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
       - notify_on_failure
       - destroy-environment
 
