--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,9 +359,9 @@ jobs:
             export API_URL=http://${BACKEND_PUBLIC_IP}:3030
             if curl -s $API_URL/api/status | grep "ok"
             then
-              exit 0
+              return 0
             else
-              exit 1
+              return 1
             fi            
       - run:
           name: Frontend smoke test.
@@ -369,9 +369,9 @@ jobs:
             FRONTEND_URL=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees          
             if curl -s $FRONTEND_URL | grep "Welcome"
             then
-              exit 0
+              return 1
             else
-              exit 1
+              return 1
             fi
       - notify_on_failure
       - destroy-environment
