--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,7 +288,9 @@ jobs:
           command: |
             cd frontend
             npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+
       - notify_on_failure
       - destroy-environment
       - revert-migrations
@@ -415,12 +417,16 @@ jobs:
           command: |
             export OldWorkflowID=$(curl --insecure https://kvdb.io/CJhzGNYEFHWL71z3PVjMum/old_workflow_id)
             echo Old Workflow ID: $OldWorkflowID
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"                     
+
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
+              echo '--Delete confirm--'
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            else 
+              echo '--Cannot cleanup--'
             fi
   
   notify_on_success:
