--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ commands:
       - run:
           name: Destroy environments
           when: on_fail
-          command: |
-            aws s3 rm "s3://udapeople-<<parameters.Workflow_ID>>" --recursive
+          command: |          
+            aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
             aws cloudformation delete-stack --stack-name "udapeople-backend-<<parameters.Workflow_ID>>"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<<parameters.Workflow_ID>>"            
   
@@ -217,7 +217,7 @@ jobs:
       - checkout
       - install_ansible
       - add_ssh_keys:
-          fingerprints: ["66:be:9c:93:c1:34:f6:76:87:93:49:36:54:e3:68:47:16:3f:b5:f6"]
+          fingerprints: ["66:be:9c:93:c1:34:f6:76:87:93:49:36:54:e3:68:47:16:3f:b5:f61"]
       - attach_workspace:
           at: ~/
       - run:
@@ -234,6 +234,7 @@ jobs:
 
             cat inventory.txt                                        
             ansible-playbook -i inventory.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
+
       - notify_on_failure
       - destroy-environment
 
@@ -287,8 +288,7 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            npm run build            
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
 
       - notify_on_failure
@@ -417,15 +417,14 @@ jobs:
           command: |
             export OldWorkflowID=$(curl --insecure https://kvdb.io/CJhzGNYEFHWL71z3PVjMum/old_workflow_id)
             echo Old Workflow ID: $OldWorkflowID
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"                     
-
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
               echo '--Delete confirm--'
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws s3 rm s3://udapeople-${OldWorkflowID --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            else 
+            else
               echo '--Cannot cleanup--'
             fi
   
