--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,7 +217,7 @@ jobs:
       - checkout
       - install_ansible
       - add_ssh_keys:
-          fingerprints: ["66:be:9c:93:c1:34:f6:76:87:93:49:36:54:e3:68:47:16:3f:b5:f61"]
+          fingerprints: ["14:f0:23:f5:1e:13:58:55:76:bc:7e:f8:30:26:db:2c:4d:35:d1:82"]
       - attach_workspace:
           at: ~/
       - run:
@@ -233,7 +233,7 @@ jobs:
             cd ..            
 
             cat inventory.txt                                        
-            ansible-playbook -i inventory.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
+            ansible-playbook -i inventory1.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
 
       - notify_on_failure
       - destroy-environment
@@ -420,12 +420,12 @@ jobs:
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
-              echo '--Delete confirm--'
+              echo --Delete confirm--
               aws s3 rm s3://udapeople-${OldWorkflowID --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-              echo '--Cannot cleanup--'
+              echo --Cannot cleanup--
             fi
   
   notify_on_success:
