--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,7 +233,7 @@ jobs:
             cd ..            
 
             cat inventory.txt                                        
-            ansible-playbook -i inventory1.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
+            ansible-playbook -i inventory.txt -u ubuntu --private-key .ssh/keyp3.pem configure-server.yml
 
       - notify_on_failure
       - destroy-environment
@@ -420,7 +420,7 @@ jobs:
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
-              echo --Delete confirm--
+              echo '--Delete confirm--'
               aws s3 rm s3://udapeople-${OldWorkflowID --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
