--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,12 +420,12 @@ jobs:
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
-              echo --Delete confirm--
-              aws s3 rm s3://udapeople-${OldWorkflowID --recursive
+              echo '--Delete confirm--'
+              aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-              echo --Cannot cleanup--
+              echo '--Cannot cleanup--'
             fi
   
   notify_on_success:
